--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <img src="picture/pinkcinamoroll.gif" alt="" class="design">
   <img src="picture/pinkStrabery.gif" alt="" class="design">
   <!-- 10 more copies -->
-  <img src="/giphy.gif" alt="" class="design">
-  <img src="/pinkcake.gif" alt="" class="design">
-  <img src="/heartstrawberry.gif" alt="" class="design">
-  <img src="/pinkcinamoroll.gif" alt="" class="design">
-  <img src="/24dd718c9d70c0abde06972b34dca35c-removebg-preview.png" alt="" class="design">
-  <img src="/pinkStrabery.gif" alt="" class="design">
-  <img src="/giphy.gif" alt="" class="design">
-  <img src="/pinkcake.gif" alt="" class="design">
-  <img src="/heartstrawberry.gif" alt="" class="design">
-  <img src="/pinkcinamoroll.gif" alt="" class="design">
+  <img src="picture/giphy.gif" alt="" class="design">
+  <img src="picture/pinkcake.gif" alt="" class="design">
+  <img src="picture/heartstrawberry.gif" alt="" class="design">
+  <img src="picture/pinkcinamoroll.gif" alt="" class="design">
+  <img src="picture/24dd718c9d70c0abde06972b34dca35c-removebg-preview.png" alt="" class="design">
+  <img src="picture/pinkStrabery.gif" alt="" class="design">
+  <img src="picture/giphy.gif" alt="" class="design">
+  <img src="picture/pinkcake.gif" alt="" class="design">
+  <img src="picture/heartstrawberry.gif" alt="" class="design">
+  <img src="picture/pinkcinamoroll.gif" alt="" class="design">
 </div>
 <div class="quiz-container">
 
